# Netology

./: .gitignore
3. Базовое программирование на C++/1. IDE/задача №1/: задача №1.vcxproj.filters
3. Базовое программирование на C++/10. CMake/1_my_first_cmake_program/: 1_my_first_cmake_program.vcxproj.filters
3. Базовое программирование на C++/10. CMake/work_2.2/: Figure.cpp  Trigl.h  rectangle.h  regtag_Trigl.cpp
3. Базовое программирование на C++/11. Сборка и подключение библиотек/my_lib_dinamic_work_2/: lib_dinamic_work_2.h  my_lib_dinamic_work_2.vcxproj
3. Базовое программирование на C++/11. Сборка и подключение библиотек/my_lib_work_1/: lib_work_1.cpp  lib_work_1.h  my_lib_work_1.vcxproj  my_lib_work_1.vcxproj.filters
3. Базовое программирование на C++/11. Сборка и подключение библиотек/work_1/: work_1.cpp  work_1.sln  work_1.vcxproj
3. Базовое программирование на C++/11. Сборка и подключение библиотек/work_2/: work_2.vcxproj
3. Базовое программирование на C++/11. Сборка и подключение библиотек/work_3/: lib_dinamic_work_2.h  work_2.cpp  work_2.sln  work_2.vcxproj
3. Базовое программирование на C++/5. ООП наследование и полиморфизм/: ~$писи тет. №1.docx  записи тет. №1.docx
3. Базовое программирование на C++/99_Итоговая_работа/: гонки.docx
4. Алгоритмы и структуры данных/: рекомендованные книги.txt
Базовое программирование на C++/10. CMake/work_2.2/: CMakeLists.txt  parallelogram.h  regtag_Trigl.h  rhombus.h  teral_Trigl.h  work4.cpp  Задача №3. Иерархия классов.cpp  Задача №3. Иерархия классов.sln
(+231 files in other folders)
